--- a/changelog/unreleased/kong/expressions_not_operator.yml
+++ b/changelog/unreleased/kong/expressions_not_operator.yml
@@ -1,3 +1,5 @@
-message: The expressions route now supports the `!` (not) operator, which allows creating routes like `!(http.path =^)` and `!(http.path == "/a" || http.path == "/b")`
+message: |
+  The expressions route now supports the `!` (not) operator, which allows creating routes like
+  `!(http.path =^ "/a")` and `!(http.path == "/a" || http.path == "/b")`
 type: "feature"
 scope: "Core"
