--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -26,7 +26,7 @@ jobs:
 
             ## Original description
 
-            #{pull_description}
+            ${pull_description}
           copy_assignees: true
           copy_milestone: true
           copy_requested_reviewers: true
