--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -342,6 +342,10 @@ jobs:
             split: first-fips
           - suite: fips
             split: second-fips
+          - suite: fips
+            split: third-fips
+          - suite: fips
+            split: fourth-fips
 
     services:
       postgres:
@@ -457,7 +461,7 @@ jobs:
           curl -L -s -o /tmp/aws-sam-cli.zip https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
           unzip -o /tmp/aws-sam-cli.zip -d /tmp/aws-sam-cli
           sudo /tmp/aws-sam-cli/install --update
-    
+
     - name: Install OneAgent
       if: ${{ inputs.dt-test }}
       run: |
@@ -558,7 +562,7 @@ jobs:
       continue-on-error: true
       run: |
           docker compose -p redis-cluster down -v
-    
+
   integration-tests-dbless:
     name: DB-less integration tests
     runs-on: ${{ inputs.arm64 == true && 'ubuntu-latest-arm64-kong' || 'ubuntu-latest-kong' }}
