chore(deps): disabled ngx_brotli on rhel7 rhel9-arm64 amazonlinux-2023-arm64 due to toolchain issues

--- a/.github/matrix-full.yml
+++ b/.github/matrix-full.yml
@@ -38,7 +38,7 @@ build-packages:
   image: centos:7
   package: rpm
   package-type: el7
-  bazel-args: --//:wasmx_el7_workaround=true
+  bazel-args: --//:wasmx_el7_workaround=true --//:brotli=False
   check-manifest-suite: el7-amd64
 - label: rhel-8
   image: rockylinux:8
@@ -53,7 +53,7 @@ build-packages:
 - label: rhel-9-arm64
   package: rpm
   package-type: el9
-  bazel-args: --platforms=//:rhel9-crossbuild-aarch64
+  bazel-args: --platforms=//:rhel9-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: el9-arm64
 
   # Amazon Linux
@@ -70,7 +70,7 @@ build-packages:
 - label: amazonlinux-2023-arm64
   package: rpm
   package-type: aws2023
-  bazel-args: --platforms=//:aws2023-crossbuild-aarch64
+  bazel-args: --platforms=//:aws2023-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: amazonlinux-2023-arm64
 
 build-images:
