--- a/changelog/Makefile
+++ b/changelog/Makefile
@@ -1,99 +1,116 @@
-CHANGELOG_VERSION=3.x.y.z
-CHANGELOG_FOLDER=unreleased
+.PHONY: generate
+
+VERSION=3.x.y.z
+FOLDER=unreleased
 DEBUG=false
+INCLUDE_UNRELEASED=false
 
 generate:
-	@rm -f changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md
-	@touch changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md
-	@if [ -d "changelog/$(CHANGELOG_FOLDER)/kong" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_FOLDER)/kong \
-			--title Kong \
-			--github-issue-repo Kong/kong \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md; \
+	@rm -f $(VERSION).md
+	@touch $(VERSION).md
+	@if [ -d "$(FOLDER)/kong" ]; then \
+		if [ "$(INCLUDE_UNRELEASED)" = "true" ]; then \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong,unreleased/kong \
+				--title Kong \
+				--github-issue-repo Kong/kong \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		else \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong \
+				--title Kong \
+				--github-issue-repo Kong/kong \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		fi \
+	fi
+	@if [ -d "$(FOLDER)/kong-manager" ]; then \
+		if [ "$(INCLUDE_UNRELEASED)" = "true" ]; then \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-manager,unreleased/manager \
+				--title Kong-Manager \
+				--github-issue-repo Kong/kong-manager \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		else \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-manager \
+				--title Kong-Manager \
+				--github-issue-repo Kong/kong-manager \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		fi \
+	fi
+	@if [ -d "$(FOLDER)/kong-ee" ]; then \
+		if [ "$(INCLUDE_UNRELEASED)" = "true" ]; then \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-ee,unreleased/kong-ee \
+				--title Kong-Enterprise \
+				--github-issue-repo Kong/kong-ee \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		else \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-ee \
+				--title Kong-Enterprise \
+				--github-issue-repo Kong/kong-ee \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		fi \
     fi
-	# EE only
-	@if [ -d "changelog/$(CHANGELOG_FOLDER)/kong-ee" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_FOLDER)/kong-ee \
-			--title Kong-Enterprise \
-			--github-issue-repo Kong/kong-ee \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md; \
+	@if [ -d "$(FOLDER)/kong-manager-ee" ]; then \
+		if [ "$(INCLUDE_UNRELEASED)" = "true" ]; then \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-manager-ee,unreleased/kong-manager-ee \
+				--title Kong-Manager-Enterprise \
+				--github-issue-repo Kong/kong-admin \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		else \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-manager-ee \
+				--title Kong-Manager-Enterprise \
+				--github-issue-repo Kong/kong-admin \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		fi \
     fi
-	# CE inspects 'kong-manager' but EE inspects 'kong-manager-ee'
-	@if [ -d "changelog/$(CHANGELOG_FOLDER)/kong-manager-ee" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_FOLDER)/kong-manager-ee \
-			--title Kong-Manager-Enterprise \
-			--github-issue-repo Kong/kong-admin \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md; \
+	@if [ -d "$(FOLDER)/kong-portal-ee" ]; then \
+		if [ "$(INCLUDE_UNRELEASED)" = "true" ]; then \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-portal-ee,unreleased/kong-portal-ee \
+				--title Kong-Portal \
+				--github-issue-repo Kong/kong-portal-templates \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		else \
+			changelog --debug=$(DEBUG) generate \
+				--repo-path . \
+				--changelog-paths $(FOLDER)/kong-portal-ee \
+				--title Kong-Portal \
+				--github-issue-repo Kong/kong-portal-templates \
+				--github-api-repo Kong/kong-ee \
+				--with-jiras \
+				>> $(VERSION).md; \
+		fi \
     fi
-	# EE only
-	@if [ -d "changelog/$(CHANGELOG_FOLDER)/kong-portal" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_FOLDER)/kong-portal \
-			--title Kong-Portal \
-			--github-issue-repo Kong/kong-portal-templates \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md; \
-    fi
-	@echo "Successfully genreate changelog changelog/$(CHANGELOG_FOLDER)/$(CHANGELOG_VERSION).md"
-
-regenerate:
-	@rm -f changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md
-	@touch changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md
-	@if [ -d "changelog/$(CHANGELOG_VERSION)/kong" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_VERSION)/kong,changelog/$(CHANGELOG_FOLDER)/kong \
-			--title Kong \
-			--github-issue-repo Kong/kong \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md; \
-    fi
-	# EE only
-	@if [ -d "changelog/$(CHANGELOG_VERSION)/kong-ee" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_VERSION)/kong-ee,changelog/$(CHANGELOG_FOLDER)/kong-ee \
-			--title Kong-Enterprise \
-			--github-issue-repo Kong/kong-ee \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md; \
-    fi
-	# CE inspects 'kong-manager' but EE inspects 'kong-manager-ee'
-	@if [ -d "changelog/$(CHANGELOG_VERSION)/kong-manager-ee" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_VERSION)/kong-manager-ee,changelog/$(CHANGELOG_FOLDER)/kong-manager-ee \
-			--title Kong-Manager-Enterprise \
-			--github-issue-repo Kong/kong-admin \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md; \
-    fi
-	# EE only
-	@if [ -d "changelog/$(CHANGELOG_VERSION)/kong-portal" ]; then \
-		changelog --debug=$(DEBUG) generate \
-			--repo-path . \
-			--changelog-paths changelog/$(CHANGELOG_VERSION)/kong-portal,changelog/$(CHANGELOG_FOLDER)/kong-portal \
-			--title Kong-Portal \
-			--github-issue-repo Kong/kong-portal-templates \
-			--github-api-repo Kong/kong-ee \
-			--with-jiras \
-			>> changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md; \
-    fi
-	@echo "Successfully regenreate changelog changelog/$(CHANGELOG_VERSION)/$(CHANGELOG_VERSION).md"
+	@echo "Successfully genreate changelog $(VERSION).md"
