--- a/.github/matrix-full.yml
+++ b/.github/matrix-full.yml
@@ -42,7 +42,7 @@ build-packages:
 - label: debian-11-arm64
   image: debian:11
   package: deb
-  bazel-args: --platforms=//:generic-crossbuild-aarch64
+  bazel-args: --platforms=//:generic-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: debian-11-arm64
 - label: debian-12
   image: debian:12
@@ -51,7 +51,7 @@ build-packages:
 - label: debian-12-arm64
   image: debian:12
   package: deb
-  bazel-args: --platforms=//:generic-crossbuild-aarch64
+  bazel-args: --platforms=//:generic-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: debian-12-arm64
 
 # RHEL
@@ -59,6 +59,7 @@ build-packages:
   image: centos:7
   package: rpm
   package-type: el7
+  bazel-args: --//:brotli=False
   check-manifest-suite: el7-amd64
 - label: rhel-8
   image: rockylinux:8
@@ -85,7 +86,7 @@ build-packages:
 - label: rhel-9-arm64
   package: rpm
   package-type: el9
-  bazel-args: --platforms=//:rhel9-crossbuild-aarch64
+  bazel-args: --platforms=//:rhel9-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: el9-arm64
 
 # Amazon Linux
@@ -97,7 +98,7 @@ build-packages:
 - label: amazonlinux-2-arm64
   package: rpm
   package-type: aws2
-  bazel-args: --platforms=//:aws2-crossbuild-aarch64
+  bazel-args: --platforms=//:aws2-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: amazonlinux-2-arm64
 - label: amazonlinux-2023
   image: amazonlinux:2023
@@ -107,7 +108,7 @@ build-packages:
 - label: amazonlinux-2023-arm64
   package: rpm
   package-type: aws2023
-  bazel-args: --platforms=//:aws2023-crossbuild-aarch64
+  bazel-args: --platforms=//:aws2023-crossbuild-aarch64 --//:brotli=False
   check-manifest-suite: amazonlinux-2023-arm64
 
 
