--- a/changelog/unreleased/kong/disable-TLSv1_1-in-openssl3.yml
+++ b/changelog/unreleased/kong/disable-TLSv1_1-in-openssl3.yml
@@ -1,3 +1,3 @@
-message: TLSv1.1 and lower is by default disabled in openssl 3.x
+message: now TLSv1.1 and lower is by default disabled in OpenSSL 3.x
 type: feature
 scope: Configuration
