feat(ci): run upgrade tests for multiple "old" versions
Currently only 2.8.0 is used to run migration tests, all the way up to
the "new" (current) version. This means that only features that are
shared across all versions from "old" to "new" can be tested, e.g. a
plugin that is not available in `2.8.0` cannot be configured and used
in migration tests.

This commit introduces a list of "old_versions" and repeats the tests
for each. Tests can use the `OLD_KONG_VERSION` environment variable to
determine whether they should execute for the current version.

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -851,20 +851,9 @@ jobs:
     name: Database migration and upgrade tests
     runs-on: ubuntu-latest-kong
     timeout-minutes: 60
-    needs: build-image
+    needs: build
     # enable this step if migration starts to be architecture-dependent
     if: ${{ inputs.arm64 != true }}
-
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: kong
-          POSTGRES_DB: kong
-          POSTGRES_HOST_AUTH_METHOD: trust
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 5s --health-timeout 5s --health-retries 8
 
     steps:
       - name: Clone Kong source code
