--- a/.github/workflows/integration_test_on_aws.yml
+++ b/.github/workflows/integration_test_on_aws.yml
@@ -39,6 +39,7 @@ concurrency:
 
 jobs:
   build:
+    timeout-minutes: ${{ fromJSON(vars.GHA_DEFAULT_TIMEOUT) }}
     uses: ./.github/workflows/build.yml
     secrets: inherit
 
