--- a/.github/workflows/autodocs.yml
+++ b/.github/workflows/autodocs.yml
@@ -70,6 +70,7 @@ jobs:
           source .ci/setup_env_github.sh
           make dev
   autodoc:
+    timeout-minutes: ${{ fromJSON(vars.GHA_DEFAULT_TIMEOUT) }}
     runs-on: ${{ vars.RUNS_ON }}
     needs: [build]
     steps:
