--- a/.github/workflows/changelog-validation.yml
+++ b/.github/workflows/changelog-validation.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   validate-changelog:
+    timeout-minutes: ${{ fromJSON(vars.GHA_DEFAULT_TIMEOUT) }}
     name: Validate changelog
     runs-on: ${{ vars.RUNS_ON }}
     steps:
