--- a/.github/workflows/manager-approval.yml
+++ b/.github/workflows/manager-approval.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   check-manager-approvals:
+    timeout-minutes: ${{ fromJSON(vars.GHA_DEFAULT_TIMEOUT) }}
     name: Did manager approve this backport?
     runs-on: ${{ vars.RUNS_ON }}
 
