--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   semgrep:
+    timeout-minutes: ${{ fromJSON(vars.GHA_DEFAULT_TIMEOUT) }}
     name: Semgrep SAST
     runs-on: ubuntu-latest
     permissions:
