--- a/changelog/Makefile
+++ b/changelog/Makefile
@@ -54,7 +54,7 @@ generate:
 				--repo-path . \
 				--changelog-paths $(VERSION)/kong,$(UNRELEASED_DIR)/kong \
 				--title Kong \
-				--github-issue-repo Kong/kong \
+				--github-issue-repo $(OWNER_REPO) \
 				--github-api-repo $(OWNER_REPO) \
 				--with-jiras \
 				>> $(VERSION).md; \
@@ -63,7 +63,7 @@ generate:
 				--repo-path . \
 				--changelog-paths $(UNRELEASED_DIR)/kong \
 				--title Kong \
-				--github-issue-repo Kong/kong \
+				--github-issue-repo $(OWNER_REPO) \
 				--github-api-repo $(OWNER_REPO) \
 				--with-jiras \
 				>> $(VERSION).md; \
@@ -75,7 +75,7 @@ generate:
 				--repo-path . \
 				--changelog-paths $(VERSION)/kong-ee,$(UNRELEASED_DIR)/kong-ee \
 				--title Kong-Enterprise \
-				--github-issue-repo Kong/kong-ee \
+				--github-issue-repo $(OWNER_REPO) \
 				--github-api-repo $(OWNER_REPO) \
 				--with-jiras \
 				>> $(VERSION).md; \
@@ -84,7 +84,7 @@ generate:
 				--repo-path . \
 				--changelog-paths $(UNRELEASED_DIR)/kong-ee \
 				--title Kong-Enterprise \
-				--github-issue-repo Kong/kong-ee \
+				--github-issue-repo $(OWNER_REPO) \
 				--github-api-repo $(OWNER_REPO) \
 				--with-jiras \
 				>> $(VERSION).md; \
