--- a/changelog/unreleased/kong/revert-req-body-limitation-patch.yml
+++ b/changelog/unreleased/kong/revert-req-body-limitation-patch.yml
@@ -1,3 +1,3 @@
-message: revert the hardcoded limitation in the ngx.read_body() API from OpenResty upstreams when dowstream in HTTP2 or HTTP3 stream mode.
+message: revert the hard-coded limitation of the ngx.read_body() API in OpenResty upstreams' new versions when downstream connections are in HTTP/2 and HTTP/3 stream modes.
 type: bugfix
 scope: Core
