--- a/changelog/unreleased/kong/feat-jwt-es512.yml
+++ b/changelog/unreleased/kong/feat-jwt-es512.yml
@@ -1,4 +1,4 @@
 message: |
-  Addded support for ES512 algorithm in JWT plugin
+  Addded support for ES512, PS256, PS384, PS512 algorithms in JWT plugin
 type: feature
 scope: Plugin
