--- a/.github/workflows/gateway-api-tests-matrix.yml
+++ b/.github/workflows/gateway-api-tests-matrix.yml
@@ -264,6 +264,8 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.TEST_API_AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.TEST_API_AZURE_CLIENT_SECRET }}
           WASM: true
+          # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
+          CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
 
       - name: Logs from Gateway Start
         if: failure()
@@ -419,6 +421,8 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.TEST_API_AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.TEST_API_AZURE_CLIENT_SECRET }}
           WASM: true
+          # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
+          CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
 
       - name: Logs from Gateway Start
         if: failure()
